# castellan

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
castellan/: __init__.py  _config_driver.py  context.py  i18n.py  options.py
castellan/common/: config.py  exception.py  utils.py
castellan/common/credentials/: credential.py  keystone_password.py  keystone_token.py  password.py  token.py
castellan/common/objects/: __init__.py  certificate.py  key.py  managed_object.py  opaque_data.py  passphrase.py  private_key.py  public_key.py  symmetric_key.py  x_509.py
castellan/key_manager/: __init__.py  barbican_key_manager.py  key.py  key_manager.py  migration.py  not_implemented_key_manager.py  symmetric_key.py  vault_key_manager.py
castellan/keymgr/: __init__.py  key.py  key_mgr.py  not_implemented_key_mgr.py  symmetric_key.py
castellan/openstack/common/: _i18n.py  log.py  policy.py
castellan/tests/: base.py  test_castellan.py  utils.py
castellan/tests/contrib/: gate_hook.sh  post_test_hook.sh
castellan/tests/functional/: config.py
castellan/tests/functional/key_manager/: test_barbican_key_manager.py  test_key_manager.py  test_vault_key_manager.py
castellan/tests/key_manager/: fake.py  mock_key_manager.py  test_barbican_key_manager.py  test_key.py  test_mock_key_manager.py  test_not_implemented_key_manager.py
castellan/tests/keymgr/: fake.py  mock_key_mgr.py  test_key.py  test_key_mgr.py  test_mock_key_mgr.py  test_not_implemented_key_mgr.py
castellan/tests/unit/: test_config_driver.py  test_options.py  test_utils.py
castellan/tests/unit/credentials/: test_keystone_password.py  test_keystone_token.py  test_password.py  test_token.py
castellan/tests/unit/key_manager/: fake.py  mock_key_manager.py  test_barbican_key_manager.py  test_key.py  test_key_manager.py  test_migration_key_manager.py  test_mock_key_manager.py  test_not_implemented_key_manager.py  test_vault_key_manager.py
castellan/tests/unit/objects/: __init__.py  test_opaque.py  test_passphrase.py  test_private_key.py  test_public_key.py  test_symmetric_key.py  test_x_509.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  testing.rst  usage.rst
doc/source/_extra/: .htaccess
doc/source/contributor/: index.rst  testing.rst
doc/source/install/: index.rst
doc/source/user/: index.rst
etc/castellan/: functional-config-generator.conf  sample-config-generator.conf
releasenotes/notes/: add-to-dict-and-from-dict-conversions-to-managed-objects-95a9f0fdbd371a87.yaml  add-vault-provider-29a4c19fe67ab51f.yaml  barbican-service-user-11ebbfcd33dace9d.yaml  bug-1638018-c23e87345e70f994.yaml  bug-1876102-7c7288fb6e90b11d.yaml  deprecate-auth-endpoint-b91a3e67b5c7263f.yaml  deprecate-vault-use_ssl-64a3b006bdcb1303.yaml  deprecate-version-attribute-2a8ea36008bc8b94.yaml  drop-python-2-7-73d3113c69d724d6.yaml  fix-vault-create-key-b4340a3067cbd93c.yaml  fix-vault-flaky-kv-api-version-b0cd9d62a39d2907.yaml  implements-keymanager-option-discovery-13a46c1dfc036a3f.yaml  secret-consumers-0253330a65b6638b.yaml  secret-consumers-e047d1c6f1a20e47.yaml  support-legacy-fixed-key-id-9fa897b547111610.yaml  use-barbican-endpoint-type-config-option-e583d30930cc22ba.yaml  use-barbican-region-name-config-option-31bec809292302b8.yaml  vault-approle-support-5ea04daea07a152f.yaml  vault-kubernetes-auth-a7b3c5d9e1f24680.yaml  vault-kv-mountpoint-919eb547764a0c74.yaml  vault-namespaces-7d334e7407396df9.yaml  vault-timeout-5eebb432e0943f74.yaml
releasenotes/source/: conf.py  index.rst
tempest_plugin/: README.rst  plugin.py
tools/: setup-vault-env.sh  tox_install.sh
