[metadata]
name = castellan
summary = Generic Key Manager interface for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    castellan

[entry_points]
oslo.config.opts =
    castellan.tests.functional.config = castellan.tests.functional.config:list_opts
    castellan.config = castellan.options:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = castellan/locale
domain = castellan

[update_catalog]
domain = castellan
output_dir = castellan/locale
input_file = castellan/locale/castellan.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = castellan/locale/castellan.pot

[wheel]
universal = 1
