[metadata]
name = castellan
summary = Generic Key Manager interface for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/castellan/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    castellan

[entry_points]
oslo.config.opts =
    castellan.tests.functional.config = castellan.tests.functional.config:list_opts
    castellan.config = castellan.options:list_opts

oslo.config.driver =
    castellan = castellan._config_driver:CastellanConfigurationSourceDriver

castellan.drivers =
    barbican = castellan.key_manager.barbican_key_manager:BarbicanKeyManager
    vault = castellan.key_manager.vault_key_manager:VaultKeyManager

[compile_catalog]
directory = castellan/locale
domain = castellan

[update_catalog]
domain = castellan
output_dir = castellan/locale
input_file = castellan/locale/castellan.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = castellan/locale/castellan.pot
