[metadata]
name = castellan
summary = Generic Key Manager interface for OpenStack
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/castellan/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    castellan

[entry_points]
oslo.config.opts =
    castellan.tests.functional.config = castellan.tests.functional.config:list_opts
    castellan.config = castellan.options:list_opts

oslo.config.driver =
    castellan = castellan._config_driver:CastellanConfigurationSourceDriver

castellan.drivers =
    barbican = castellan.key_manager.barbican_key_manager:BarbicanKeyManager
    vault = castellan.key_manager.vault_key_manager:VaultKeyManager
